--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,23 @@ services:
     depends_on:
       - db
     ports:
-      - 5000:3000 # ポートフォワード
+      - 5000:3000
     networks:
       app_net:
         ipv4_address: '172.20.0.3'
+
+  frontend:
+    container_name: front
+    build: ./frontend/
+    image: frontend
+    volumes:
+      - ./frontend:/app
+    ports:
+      - 3000:3000
+    command: "npm run dev"
+    networks:
+      app_net:
+        ipv4_address: '172.20.0.4'
 
 networks:
   app_net:
