--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
 
+ADD package.json /app/package.json
+ADD package-lock.json /app/package-lock.json
+
 RUN apt-get update -y && \
   apt-get upgrade -y && \
   npm install -g create-nuxt-app && \
